k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: student-management
  namespace: student-test

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student-management

  template:
    metadata:
      labels:
        app: student-management

    spec:
      containers:
      - name: student-management

        image: amaidiaabdelmajiddo/student-management:3

        imagePullPolicy: Always

        ports:
        - containerPort: 8080
