k8s/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: student-service
  namespace: student-test
  labels:
    app: student-management

spec:
  selector:
    app: student-management

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: NodePort
