k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: student-ingress
  namespace: student-test

spec:
  rules:
  - host: student.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: student-service

            port:
              number: 8080
